# ArtMatcingDeploy

./: .gitignore  Dockerfile  compare_clip_siglip.py  docker-compose.yml  main.py  pyproject.toml  try.ipynb  updated_images.csv
data/: Products-Export-2025-February-16-1830-full.csv  download_script.py
gui/: GUI.py  gui_logic.py  old_GUI.py
src/db/: db_api.py  db_manager.py
src/v1/: art_image.py  art_matching.py  embed_model.py  logic.py  utils.py
template/: art_matching.py
