[project]
name = "artmatcingdeploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "clip",
    "fastapi>=0.115.8",
    "gradio>=5.18.0",
    "pymilvus==2.5.3",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.42.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
